# Iberalign

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  iberprime-spec.md  index.html  package-lock.json  package.json  start.cmd  vite.config.ts
.claude/: settings.json
.github/workflows/: ci.yml
crates/align-cli/: Cargo.toml
crates/align-cli/src/: main.rs
crates/align-core/: Cargo.toml
crates/align-core/src/: align.rs  analyze.rs  composition.rs  coords.rs  edit.rs  io.rs  lib.rs  matrix.rs  model.rs  msa.rs  parse.rs  translate.rs
crates/align-core/tests/: align_proptest.rs  composition_tests.rs  coords_proptest.rs  fixtures_tests.rs  msa_proptest.rs  parse_tests.rs
crates/align-core/tests/fixtures/: aligned.fasta  comments_blanks.fasta  duplicates.fasta  gaps_mixed.fasta  iupac.fasta  malformed_aligned.fasta  ragged.fasta  rna.fasta  softmask.fasta  stops.fasta
crates/align-extern/: Cargo.toml  build.rs
crates/align-extern/shim/: kalign_compat.h  mm_malloc.h  unistd.h  version.h
crates/align-extern/shim/sys/: time.h
crates/align-extern/src/: kalign.rs  lib.rs
docs/plans/: block-align-context.md  block-align-plan.md  block-align-tasks.md  consensus-coloring-context.md  consensus-coloring-plan.md  consensus-coloring-tasks.md  copy-paste-context.md  copy-paste-plan.md  copy-paste-tasks.md  custom-colors-context.md  custom-colors-plan.md  custom-colors-tasks.md  dna-protein-view-context.md  dna-protein-view-plan.md  dna-protein-view-tasks.md  extern-aligner-context.md  extern-aligner-plan.md  extern-aligner-tasks.md  initialization-context.md  initialization-plan.md  initialization-tasks.md  m1-context.md  m1-plan.md  m1-tasks.md  m2-context.md  m2-plan.md  m2-tasks.md  m3-context.md  m3-plan.md  m3-tasks.md  progressive-msa-context.md  progressive-msa-plan.md  progressive-msa-tasks.md  selection-context.md  selection-plan.md  selection-tasks.md
fixtures/: sample.fasta  smoke-block-dna.fasta  smoke-block-slack.fasta  smoke-msa-dna.fasta  smoke-msa-protein.fasta  smoke-msa-rna.fasta
scripts/: dev-clean.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src/ipc/: clipboard.ts  commands.ts  edit.ts  translate.ts
src/model/: coloring.test.ts  coloring.ts  columnData.test.ts  columnData.ts  consensus.test.ts  consensus.ts  coords.test.ts  coords.ts  copy.test.ts  copy.ts  paste.test.ts  paste.ts  profile.test.ts  profile.ts  trailing.test.ts  trailing.ts  types.ts  typing.test.ts  typing.ts  view.test.ts  view.ts
src/render/: Canvas2DRenderer.ts  MinimapLayer.ts  NameColumnRenderer.ts  Renderer.ts  RulerRenderer.ts  ScrollbarsLayer.ts  SelectionLayer.ts  TrackLaneRenderer.ts  chrome.ts  coloring.test.ts  coloring.ts  colors.test.ts  colors.ts  glyphs.ts  lod.test.ts  lod.ts  loop.ts  minimap.test.ts  minimap.ts  runs.test.ts  runs.ts  scrollbar.test.ts  scrollbar.ts  ticks.test.ts  ticks.ts  viewport.test.ts  viewport.ts
src/state/: selection.test.ts  selection.ts  store.test.ts  store.ts  viewport.test.ts  viewport.ts
src/test/: setup.ts
src/ui/: App.css  App.tsx  ColorsDialog.css  ColorsDialog.dom.test.tsx  ColorsDialog.tsx  ConsensusDialog.css  ConsensusDialog.tsx  Grid.css  Grid.tsx  MenuBar.css  MenuBar.tsx  StatusBar.tsx  Toolbar.css  Toolbar.tsx  TranslateDialog.css  TranslateDialog.dom.test.tsx  TranslateDialog.tsx  hover.test.ts  hover.ts
