[package]
name = "iberalign"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Iberalign desktop app: Tauri v2 shell over the align-core engine."

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "iberalign_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Compile the in-process KAlign v3 MSA backend (Apache-2.0) into the app.
# Needs the crates/align-extern/vendor/kalign submodule + a C toolchain (MSVC).
kalign = ["dep:align-extern", "align-extern/kalign"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
align-core.workspace = true
align-extern = { workspace = true, optional = true }
tauri-plugin-clipboard-manager = "2.3.2"
