[package]
name = "align-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Headless CLI over align-core — a scriptable integration harness for CI."

[[bin]]
name = "iberalign-cli"
path = "src/main.rs"

[features]
default = []
# Enable the in-process KAlign v3 backend for `msa --engine kalign`.
# Needs the crates/align-extern/vendor/kalign submodule + a C toolchain (MSVC).
kalign = ["dep:align-extern", "align-extern/kalign"]

[dependencies]
align-core.workspace = true
align-extern = { workspace = true, optional = true }
