[package]
name = "align-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure, UI-free engine: parsing, data model, coordinates, alignment, analyses, I/O."

[dependencies]
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
